Sends a message on Slack with changelog
